[package]
name = "rust_lib_home_now_mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.36"

solana-client = "1.18.12"
solana-cli-config = "1.18.12"
solana-clap-utils = "1.18.12"
solana-sdk = "1.18.12"
borsh = {version = "1.5.0", features = ["derive"]}
bip39 = "2.0.0"
